# t3d-python

./: Cargo.toml  LICENSE  README.md  pyproject.toml  test.py
src/: ast.rs  lib.rs  parser.rs  t3d.pest
src/tests/data/: DMDeathFan.t3d  MG_NTW2_Lib_Stairway.t3d  mirra.t3d  terraininfo.t3d
