[package]
name = "t3d-python"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="t3dpy"
crate-type=["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pest = "2.7.11"
pest_derive = "2.7.11"
pest_consume = "1.1.3"
pest_consume_macros = "1.1.0"

[dependencies.pyo3]
version = "0.20.2"
features = ["extension-module", "macros"]
