[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"

[project]
name = "t3dpy"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]